# mirror-sim

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.deploy.yml  make.ps1  mirror.md  render.yaml
.codex/: config.toml
.github/: pull_request_template.md
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py  utils.py  world_model.py  world_query.py  worlds.py
backend/app/automation/: __init__.py  service.py
backend/app/decision_kernel/: __init__.py  service.py
backend/app/domain/: models.py
backend/app/evals/: service.py
backend/app/graph/: __init__.py  service.py
backend/app/ingest/: __init__.py  service.py
backend/app/model_access/: __init__.py  service.py
backend/app/personas/: __init__.py  service.py
backend/app/perturbations/: __init__.py  service.py
backend/app/reports/: service.py
backend/app/safety/: __init__.py  service.py
backend/app/scenarios/: __init__.py  service.py
backend/app/sessions/: __init__.py  service.py
backend/app/simulation/: rules.py  service.py
backend/app/world_templates/: __init__.py  service.py
backend/tests/: test_api.py  test_automation.py  test_cli.py  test_decision_kernel.py  test_model_access.py  test_pipeline.py  test_utils.py  test_worlds.py
backend/tests/fixtures/: inspect_world_entity_east_gate.json  inspect_world_event_gate_failure_risk.json  inspect_world_persona_su_he.json
backlog/: sprint-01.md
deploy/: Caddyfile
docs/: subagents.md
frontend/: package-lock.json  package.json
scripts/: bootstrap_github.py  (+10 more)
(+169 files in other folders)
