[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-engine"
version = "0.1.0"
description = "Phase 0 harness for the Mirror Engine demo sandbox."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "uvicorn>=0.30,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
